# ttf2bpp

./: .gitignore  CMakeLists.txt  Readme.md  conanfile.py  main.cpp
cmake/: libraries.cmake  magick.cmake  unicode.cmake
configuration/: config_impl.h  configuration.cpp  convert.cpp  glyphs.cpp  utf_conv.h
configuration/iterator/: iterator.cpp  iterator.h
doc/: readme.txt
doc/samples/: config-japaneseexample.yml
include/ttf2bpp/: configuration.h  glyphs.h  renderer.h  ttf2bpp.h  ttf2bpp_exports.h  unicodedatabase.h
interface/: main.cpp
interface/noitifer/: notifier.cpp  notifier.h
render/: pnghelper.cpp  pnghelper.h  render_glyph_conv.cpp  render_glyph_conv.h  renderer.cpp
unicode/: unicodedatabase.cpp
